Add login/logout forms

--- a/k8s_secrets_service/secrets_engine/templates/secrets_engine/index.html
+++ b/k8s_secrets_service/secrets_engine/templates/secrets_engine/index.html
@@ -6,6 +6,7 @@
 
 {% block body %}
 <body>
-"Welcome to k8s-secrets-service!"
+<h1>Welcome to k8s-secrets-service!</h1>
+<a href="{% url 'create-secret' %}">Create kubernetes secret</a>
 </body>
 {% endblock %}
