--- a/k8s_secrets_service/templates/base.html
+++ b/k8s_secrets_service/templates/base.html
@@ -9,6 +9,11 @@
 {% block navbar %}
 <div style="background-color: #79aec8; margin-top: 1rem; margin-bottom: 1rem">
   <a href="{% url 'main' %}">Main</a>
+  {% if request.user.is_authenticated %}
+  <a href="{% url 'logout' %}">Logout</a>
+  {% else %}
+  <a href="{% url 'login' %}">Login</a>
+  {% endif %}
 </div>
 {% endblock %}
 
