--- a/k8s_secrets_service/secrets_engine/templates/secrets_engine/create_secret.html
+++ b/k8s_secrets_service/secrets_engine/templates/secrets_engine/create_secret.html
@@ -7,5 +7,21 @@
 {% block body %}
 <body>
 <h1>Create secret for your application</h1>
+<form method="post">
+    {% csrf_token %}
+    <div>
+        <label>Secret Name: <input type="text" name="secret_name" required></label>
+    </div>
+    <div>
+        <label>Secret Key: <input type="text" name="secret_key" required></label>
+    </div>
+    <div>
+        <label>Secret Value: <input type="text" name="secret_value" required></label>
+    </div>
+    <div>
+        <label>Namespace: <input type="text" name="namespace" placeholder="possible value: development" required></label>
+    </div>
+    <input type="submit" value="Submit">
+</form>
 </body>
 {% endblock %}
