--- a/k8s_secrets_service/templates/base.html
+++ b/k8s_secrets_service/templates/base.html
@@ -8,11 +8,11 @@
 </head>
 {% block navbar %}
 <div style="background-color: #79aec8; margin-top: 1rem; margin-bottom: 1rem">
-  <a href="{% url 'main' %}">Main</a>
+  <h4><a href="{% url 'main' %}">Main</a></h4>
   {% if request.user.is_authenticated %}
-  <a href="{% url 'logout' %}">Logout</a>
+  <h4><a href="{% url 'logout' %}">Logout</a></h4>
   {% else %}
-  <a href="{% url 'login' %}">Login</a>
+  <h4><a href="{% url 'login' %}">Login</a></h4>
   {% endif %}
 </div>
 {% endblock %}
